--- a/css/gal.css
+++ b/css/gal.css
@@ -5,10 +5,29 @@ body{
   font-family: Arial, Century Gothic, Helvetica,  sans-serif;
 }
 
+.bas {
+text-align:left;	
+ 
+}
+
+.photo {  
+
+  margin: 0 10px 10px 0; /* Отступы */
+  padding: 10px; /* Поля сверху и снизу */
+  text-align: center; /* Выравнивание по центру */
+  font-size: 14px;
+  display: inline-block; /* Строчно-блочный элемент */
+	border: 1px solid #444444;
+}
+
+.photo .img{
+
+}
+
 .link {
  text-decoration: underline;
  cursor: pointer; 
- font-size: 35px;
+ font-size: 15px;
  }
  
  .link0 {
@@ -93,16 +112,19 @@ color: #666666;
 .style1{
 	font-size:18px;
 }
-#vl-img img {
+
+.img {
 cursor: pointer;
 vertical-align: middle;
 margin: 5px;
 padding: 1px;	
-}
-#vl-img .img {
 border: 3px solid #444444;
 }
-#vl-img .img1 {
+.img1 {
+	cursor: pointer;
+vertical-align: middle;
+margin: 5px;
+padding: 1px;
 border: 3px solid #00BB00;
 }
 
@@ -232,7 +254,7 @@ margin-right: 3px;
   background: rgba(0, 0, 0, 0.4);
   position: absolute;
   width: 100%;
-  height: 70px;
+
   z-index: 1000;
 }
 
@@ -272,4 +294,12 @@ margin-top: 3px;
   border: none;
   padding: 9px !important;
   cursor: pointer;
+}
+
+#send {
+  font-size: 18px; 
+  cursor: pointer;
+  padding: 10px;
+  width: 300px;
+  background: #24d006;
 }
